Поправил стили кнопок, добавил стили базовой формы и вертикальной,  добавил задачи, сделал ресурформу

--- a/src/app/styles/abstracts/variable.sass
+++ b/src/app/styles/abstracts/variable.sass
@@ -2,7 +2,7 @@
     --palette-color-1: #201e4b
     --palette-color-2: rgb(219, 219, 219)
     --palette-color-3: rgb(255, 255, 255)
-    --palette-color-4: #83adf0
+    --palette-color-4: #c1ce9c
     --palette-color-5: rgb(92, 120, 148)
 
     --text-color: #283b48ef
@@ -49,9 +49,8 @@
     --red-button-background-color: #e2788c
     --red-button-background-color-hover: #e06a92
 
-    --green-button-background-color: #5f9928
-    --green-button-background-color-hover: #57bd1c
-
+    --green-button-background-color: #c1ce9c
+    --green-button-background-color-hover: #b0bd8c
     //TABLE
     --table-header-background: #c1ce9c
     --table-cell-border: 1px solid #c1ce9c
