--- a/src/app/styles/core/_reset.sass
+++ b/src/app/styles/core/_reset.sass
@@ -2,16 +2,22 @@ button
     width: 100%
     height: 100%
     padding: 8px 15px
+    color: var(--button-color)
     background: rgba(0, 0, 0, 0)
     text-decoration: none
     border: none
     cursor: pointer
+    align-items: center
+    justify-content: center
     
 .nav-link
-    display: inline-flex
+    display: flex
     align-items: center
     padding: 8px 15px
     color: var(--text-color-light)
     text-decoration: none
     cursor: pointer
     transition: color .2s ease
+.ico
+  display: flex
+  text-align: center
